fixed ID duplication, and other minor fixes

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,181 +1,203 @@
 <section class="gallery container" id="mainpage-section-gallery">
-        <div class="gallery_wrap">
-            <h2 class="gallery_menu">Breathe in the Space</h2>
-            <p class="gallery_text">
-                Step inside YogaBloom and feel the calm. Explore our serene studio and
-                the peaceful moments our community shares during each session.
-            </p>
-        </div>
-        <ul class="gallery_list">
-            <li class="gallery_item">
-                <picture>
-                    <source srcset="
-                     /img/gallery/DesktopImage1.jpg  1x,
-                     /img/gallery/DesktopImage7.jpg  2x
-            " 
-             media="(min-width: 1336px)" 
-            />
-                    <source srcset="
-                     /img/gallery/TabletImages1.jpg  1x,
-                     /img/gallery/TabletImages7.jpg  2x
-            " 
-             media="(min-width: 768px)" 
-            />
-                    <source srcset="
-                    /img/gallery/PhoneImages1.jpg    1x,
-                    /img/gallery/PhoneImages7.jpg    2x
-            " 
-             media="(max-width: 767px)" 
-            />
-                <img src="/img/gallery/PhoneImages1.jpg" 
-                    alt="Low Lunge Pose" 
-                    class="gallery_image" 
-                    width="421"
-                    height="448" 
-                />
-                </picture>
-            </li>
-            <li class="gallery_item">
-                <picture>
-                    <source srcset="
-                     /img/gallery/DesktopImage2.jpg  1x,
-                     /img/gallery/DesktopImage8.jpg  2x
-            " media="(min-width: 1336px)" />
-                    <source srcset="
-                     /img/gallery/TabletImages2.jpg  1x,
-                     /img/gallery/TabletImages8.jpg  2x
-            " media="(min-width: 768px)" />
-                    <source srcset="
-                     /img/gallery/PhoneImages2.jpg    1x,
-                     /img/gallery/PhoneImages8.jpg    2x
-            " 
-             media="(max-width: 767px)" 
-            />
-                <img 
-                    src="/img/gallery/PhoneImages2.jpg" 
-                    alt="Easy Pose" 
-                    class="gallery_image" 
-                    width="421"
-                    height="448" 
-                />
-                </picture>
-            </li>
-            <li class="gallery_item">
-                <picture>
-                    <source srcset="
-                     /img/gallery/DesktopImage3.jpg  1x,
-                     /img/gallery/DesktopImage9.jpg  2x
-            " 
-             media="(min-width: 1336px)" 
-            />
-                    <source srcset="
-                     /img/gallery/TabletImages3.jpg  1x,
-                     /img/gallery/TabletImages9.jpg  2x
-            " 
-             media="(min-width: 768px)" 
-            />
-                    <source srcset="
-                     /img/gallery/PhoneImages3.jpg    1x,
-                     /img/gallery/PhoneImages9.jpg    2x
-            " 
-             media="(max-width: 767px)" 
-            />
-                <img 
-                    src="/img/gallery/PhoneImages3.jpg" 
-                    alt="Fitness center" 
-                    class="gallery_image" 
-                    width="421"
-                    height="448" 
-                />
-                </picture>
-            </li>
-            <li class="gallery_item">
-                <picture>
-                    <source srcset="
-                     /img/gallery/DesktopImage4.jpg  1x,
-                     /img/gallery/DesktopImage10.jpg  2x
-            " 
-             media="(min-width: 1336px)" 
-            />
-                    <source srcset="
-                     /img/gallery/TabletImages4.jpg    1x,
-                     /img/gallery/TabletImages10.jpg    2x
-            " 
-             media="(min-width: 768px)" 
-            />
-                    <source srcset="
-                     /img/gallery/PhoneImages4.jpg    1x,
-                     /img/gallery/PhoneImages10.jpg    2x
-            " 
-             media="(max-width: 767px)" 
-            />
-                <img 
-                    src="/img/gallery/PhoneImages4.jpg" 
-                    alt="Yoga studio" 
-                    class="gallery_image" 
-                    width="421"
-                    height="448" 
-                />
-                </picture>
-            </li>
-            <li class="gallery_item">
-                <picture>
-                    <source srcset="
-                     /img/gallery/DesktopImage5.jpg  1x,
-                     /img/gallery/DesktopImage11.jpg  2x
-            " 
-             media="(min-width: 1336px)" 
-            />
-                    <source srcset="
-                     /img/gallery/TabletImages5.jpg    1x,
-                     /img/gallery/TabletImages11.jpg    2x
-            " 
-             media="(min-width: 768px)" 
-            />
-                    <source srcset="
-                     /img/gallery/PhoneImages5.jpg    1x,
-                     /img/gallery/PhoneImages11.jpg    2x
-            " 
-             media="(max-width: 767px)" 
-            />
-                <img 
-                    src="/img/gallery/PhoneImages5.jpg" 
-                    alt="Reflection" 
-                    class="gallery_image"
-                    width="421"
-                    height="448" 
-                />
-                </picture>
-            </li>
-            <li class="gallery_item">
-                <picture>
-                    <source srcset="
-                     /img/gallery/DesktopImage6.jpg  1x,
-                     /img/gallery/DesktopImage12.jpg  2x
-            " 
-             media="(min-width: 1336px)" 
-            />
-                    <source srcset="
-                     /img/gallery/TabletImages6.jpg    1x,
-                     /img/gallery/TabletImages12.jpg    2x
-            " 
-             media="(min-width: 768px)" 
-            />
-                    <source srcset=" 
-                     /img/gallery/PhoneImages6.jpg    1x,
-                     /img/gallery/PhoneImages12.jpg    2x
-            " 
-             media="(max-width: 767px)" 
-            />
-                <img 
-                    src="/img/gallery/PhoneImages6.jpg" 
-                    alt="Stillness" 
-                    class="gallery_image" 
-                    width="421"
-                    height="448" 
-                />
-                </picture>
-            </li>
-        </ul>
-    </div>
+  <div class="gallery_wrap">
+    <h2 class="gallery_menu">Breathe in the Space</h2>
+    <p class="gallery_text">
+      Step inside YogaBloom and feel the calm. Explore our serene studio and the
+      peaceful moments our community shares during each session.
+    </p>
+  </div>
+  <ul class="gallery_list">
+    <li class="gallery_item">
+      <picture>
+        <source
+          srcset="
+            /img/gallery/DesktopImage1.jpg 1x,
+            /img/gallery/DesktopImage7.jpg 2x
+          "
+          media="(min-width: 1336px)"
+        />
+        <source
+          srcset="
+            /img/gallery/TabletImages1.jpg 1x,
+            /img/gallery/TabletImages7.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            /img/gallery/PhoneImages1.jpg 1x,
+            /img/gallery/PhoneImages7.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="/img/gallery/PhoneImages1.jpg"
+          alt="Low Lunge Pose"
+          class="gallery_image"
+          width="421"
+          height="448"
+        />
+      </picture>
+    </li>
+    <li class="gallery_item">
+      <picture>
+        <source
+          srcset="
+            /img/gallery/DesktopImage2.jpg 1x,
+            /img/gallery/DesktopImage8.jpg 2x
+          "
+          media="(min-width: 1336px)"
+        />
+        <source
+          srcset="
+            /img/gallery/TabletImages2.jpg 1x,
+            /img/gallery/TabletImages8.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            /img/gallery/PhoneImages2.jpg 1x,
+            /img/gallery/PhoneImages8.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="/img/gallery/PhoneImages2.jpg"
+          alt="Easy Pose"
+          class="gallery_image"
+          width="421"
+          height="448"
+        />
+      </picture>
+    </li>
+    <li class="gallery_item">
+      <picture>
+        <source
+          srcset="
+            /img/gallery/DesktopImage3.jpg 1x,
+            /img/gallery/DesktopImage9.jpg 2x
+          "
+          media="(min-width: 1336px)"
+        />
+        <source
+          srcset="
+            /img/gallery/TabletImages3.jpg 1x,
+            /img/gallery/TabletImages9.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            /img/gallery/PhoneImages3.jpg 1x,
+            /img/gallery/PhoneImages9.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="/img/gallery/PhoneImages3.jpg"
+          alt="Fitness center"
+          class="gallery_image"
+          width="421"
+          height="448"
+        />
+      </picture>
+    </li>
+    <li class="gallery_item">
+      <picture>
+        <source
+          srcset="
+            /img/gallery/DesktopImage4.jpg  1x,
+            /img/gallery/DesktopImage10.jpg 2x
+          "
+          media="(min-width: 1336px)"
+        />
+        <source
+          srcset="
+            /img/gallery/TabletImages4.jpg  1x,
+            /img/gallery/TabletImages10.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            /img/gallery/PhoneImages4.jpg  1x,
+            /img/gallery/PhoneImages10.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="/img/gallery/PhoneImages4.jpg"
+          alt="Yoga studio"
+          class="gallery_image"
+          width="421"
+          height="448"
+        />
+      </picture>
+    </li>
+    <li class="gallery_item">
+      <picture>
+        <source
+          srcset="
+            /img/gallery/DesktopImage5.jpg  1x,
+            /img/gallery/DesktopImage11.jpg 2x
+          "
+          media="(min-width: 1336px)"
+        />
+        <source
+          srcset="
+            /img/gallery/TabletImages5.jpg  1x,
+            /img/gallery/TabletImages11.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            /img/gallery/PhoneImages5.jpg  1x,
+            /img/gallery/PhoneImages11.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="/img/gallery/PhoneImages5.jpg"
+          alt="Reflection"
+          class="gallery_image"
+          width="421"
+          height="448"
+        />
+      </picture>
+    </li>
+    <li class="gallery_item">
+      <picture>
+        <source
+          srcset="
+            /img/gallery/DesktopImage6.jpg  1x,
+            /img/gallery/DesktopImage12.jpg 2x
+          "
+          media="(min-width: 1336px)"
+        />
+        <source
+          srcset="
+            /img/gallery/TabletImages6.jpg  1x,
+            /img/gallery/TabletImages12.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            /img/gallery/PhoneImages6.jpg  1x,
+            /img/gallery/PhoneImages12.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="/img/gallery/PhoneImages6.jpg"
+          alt="Stillness"
+          class="gallery_image"
+          width="421"
+          height="448"
+        />
+      </picture>
+    </li>
+  </ul>
 </section>
