--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -6,30 +6,32 @@
     <div class="price">$10</div>
     <form>
       <div class="form-row">
-        <label class="form-label" for="name">Your Name</label>
+        <label class="form-label" for="modal-1session-name">Your Name</label>
         <input
           class="form-input"
           type="text"
-          id="name"
+          id="modal-1session-name"
           placeholder="Placeholder"
         />
       </div>
       <div class="form-grid">
         <div class="form-row">
-          <label class="form-label" for="email">Email</label>
+          <label class="form-label" for="modal-1session-email">Email</label>
           <input
             class="form-input"
             type="email"
-            id="email"
+            id="modal-1session-email"
             placeholder="Placeholder"
           />
         </div>
         <div class="form-row">
-          <label class="form-label" for="phone">Phone number</label>
+          <label class="form-label" for="modal-1session-phone"
+            >Phone number</label
+          >
           <input
             class="form-input"
             type="tel"
-            id="phone"
+            id="modal-1session-phone"
             placeholder="Placeholder"
             required
           />
@@ -48,30 +50,32 @@
     <div class="price">$65</div>
     <form>
       <div class="form-row">
-        <label class="form-label" for="name">Your Name</label>
+        <label class="form-label" for="modal-8sessions-name">Your Name</label>
         <input
           class="form-input"
           type="text"
-          id="name"
+          id="modal-8sessions-name"
           placeholder="Placeholder"
         />
       </div>
       <div class="form-grid">
         <div class="form-row">
-          <label class="form-label" for="email">Email</label>
+          <label class="form-label" for="modal-8sessions-email">Email</label>
           <input
             class="form-input"
             type="email"
-            id="email"
+            id="modal-8sessions-email"
             placeholder="Placeholder"
           />
         </div>
         <div class="form-row">
-          <label class="form-label" for="phone">Phone number</label>
+          <label class="form-label" for="modal-8sessions-phone"
+            >Phone number</label
+          >
           <input
             class="form-input"
             type="tel"
-            id="phone"
+            id="modal-8sessions-phone"
             placeholder="Placeholder"
             required
           />
@@ -90,30 +94,32 @@
     <div class="price">$80</div>
     <form>
       <div class="form-row">
-        <label class="form-label" for="name">Your Name</label>
+        <label class="form-label" for="modal-12sessions-name">Your Name</label>
         <input
           class="form-input"
           type="text"
-          id="name"
+          id="modal-12sessions-name"
           placeholder="Placeholder"
         />
       </div>
       <div class="form-grid">
         <div class="form-row">
-          <label class="form-label" for="email">Email</label>
+          <label class="form-label" for="modal-12sessions-email">Email</label>
           <input
             class="form-input"
             type="email"
-            id="email"
+            id="modal-12sessions-email"
             placeholder="Placeholder"
           />
         </div>
         <div class="form-row">
-          <label class="form-label" for="phone">Phone number</label>
+          <label class="form-label" for="modal-12sessions-phone"
+            >Phone number</label
+          >
           <input
             class="form-input"
             type="tel"
-            id="phone"
+            id="modal-12sessions-phone"
             placeholder="Placeholder"
             required
           />
