--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 1214px;
 }
 
 .about-head {
@@ -26,9 +28,10 @@
 .about-list {
   width: 343px;
   gap: 48px;
-  width: 343;
-  height: 776;
-  opacity: 1;
+}
+
+.about-item {
+    margin-bottom: 48px;
 }
 
 .about-subtitle {
