--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -5,7 +5,8 @@
   justify-content: center;
   align-items: center;
   min-height: auto;
-  padding: 64px 16px;
+  padding-top: 64px;
+  padding-bottom: 64px;
 }
 
 .about-head {
@@ -26,7 +27,7 @@
 }
 
 .about-list {
-  width: 343px;
+  width: auto;
   gap: 48px;
 }
 
