--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer-wrapper">
       <div class="first-block">
-        <a href="/index.html" class="footer-logo">
+        <a href="/src/index.html" class="footer-logo">
           <svg width="84px" height="36px" class="footer-logo-icon">
             <use href="/img/icons.svg#icon-logo"></use>
           </svg>
