--- a/src/css/team.css
+++ b/src/css/team.css
@@ -22,7 +22,7 @@
   line-height: 1.2;
   letter-spacing: 0.01em;
   text-align: center;
-  font-family: 'Carbin';
+  font-family: 'Cabin';
 }
 .team-text {
   margin-bottom: 48px;
