--- a/src/css/header.css
+++ b/src/css/header.css
@@ -238,7 +238,7 @@
     display: flex;
     margin-right: 0;
     font-size: 16px;
-    width: 400;
+    width: 500px;
   }
   .header-ul {
     display: flex;
