--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,32 +1,36 @@
 <header class="header">
-  <div class="header-container">
-    <button type="button" class="header-button-menu">
-      <svg class="header-menu-icon" width="24" height="24">
-        <use href="/img/icons.svg#icon-menu"></use>
-      </svg>
-    </button>
-    <nav class="header-nav">
-      <ul class="header-ul">
-        <li>
-          <a href="#yoga-classes" class="nav-link-header current"
-            >Yoga Classes</a
-          >
-        </li>
-        <li><a href="#team" class="nav-link-header">Team</a></li>
-        <li>
-          <a href="#testimonials" class="nav-link-header">Testimonials</a>
-        </li>
-        <li><a href="#pricing" class="nav-link-header">Pricing</a></li>
-        <li><a href="#contacts" class="nav-link-header">Contacts</a></li>
-      </ul>
-    </nav>
-    <svg class="header-logo" width="84" height="36">
-      <use href="/img/icons.svg#icon-logo"></use>
-    </svg>
-    <div class="header-btm-nav">
-      <a href="#pricing" class="my-button"
-        >Join <span class="my-button-span">Now</span></a
-      >
+  <div class="container">
+    <div class="header-container">
+      <button type="button" class="header-button-menu">
+        <svg class="header-menu-icon" width="24" height="24">
+          <use href="/img/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
+      <nav class="header-nav">
+        <ul class="header-ul">
+          <li>
+            <a href="#yoga-classes" class="nav-link-header current"
+              >Yoga Classes</a
+            >
+          </li>
+          <li><a href="#team" class="nav-link-header">Team</a></li>
+          <li>
+            <a href="#testimonials" class="nav-link-header">Testimonials</a>
+          </li>
+          <li><a href="#pricing" class="nav-link-header">Pricing</a></li>
+          <li><a href="#contacts" class="nav-link-header">Contacts</a></li>
+        </ul>
+      </nav>
+      <a href="/Project-team-12/index.html" class="header-logo-link">
+        <svg class="header-logo" width="84" height="36">
+          <use href="/img/icons.svg#icon-logo"></use>
+        </svg>
+      </a>
+      <div class="header-btm-nav">
+        <a href="#pricing" class="my-button"
+          >Join <span class="my-button-span">Now</span></a
+        >
+      </div>
     </div>
   </div>
 
