--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: 'Sarabun', 'Roboto', 'Cabin' sans-serif;
+  font-family: 'Sarabun', 'Roboto', 'Cabin', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
