--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -19,11 +19,11 @@
 }
 
 .about-title {
-  font-family: 'Cabin', sans-serif;
+  font-family: 'Cabin' sans-serif;
   font-weight: 400;
   font-size: 40px;
   line-height: 120%;
-  letter-spacing: 0.01em;
+  letter-spacing: 1%;
 }
 
 .about-list {
@@ -32,23 +32,23 @@
 }
 
 .about-item {
-  margin-bottom: 48px;
+    margin-bottom: 48px;
 }
 
 .about-subtitle {
-  font-family: 'Cabin', sans-serif;
+  font-family: 'Cabin' sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 140%;
-  letter-spacing: 0.01em;
+  letter-spacing: 1%;
 }
 
 .about-text {
-  font-family: 'Sarabun', sans-serif;
+  font-family: 'Sarabun' sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 160%;
-  letter-spacing: 0;
+  letter-spacing: 0%;
 }
 
 .join-link {
@@ -79,6 +79,8 @@
 
   .about-text {
     font-size: 18px;
+    width: 340;
+    height: 104;
   }
 
   .join-mobile {
