--- a/src/css/yoga-classes.css
+++ b/src/css/yoga-classes.css
@@ -1,5 +1,4 @@
 .yoga-classes {
-  height: 1756px;
   background-color: #dfebeb;
   padding-bottom: 64px;
   padding-top: 64px;
@@ -111,7 +110,7 @@
   border: 1px solid #c2d9fc;
   border-radius: 100px;
   padding: 10px 24px;
-  width: 343px;
+  width: 100%;
   height: 46px;
   background-color: #c2d9fc;
   font-weight: 500;
